# liblightmodbus

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .makeconf  .makefile-modules  .makefile-staticmem  .travis.yml  CMakeLists.txt  Kconfig  LICENSE  README.md  build-man.sh  demo.c  exception.h  genconf.sh  make-avr.py  makefile  makefile-avr  makefile-coverage  man-build.sh  man-revise.sh  master.c  master.h  modlib.c  modlib.h  parser.h  slave.c  slave.h  slavetypes.h
.github/workflows/: basic-test.yml  cmake.yml  codacy-analysis.yml  codeql-analysis.yml  v3.0-ci.yml
debian/: changelog  control  copyright  libmodlib-dev.dirs  libmodlib-dev.install
doc/: ModbusData.3lightmodbus.md  ModbusDataType.3lightmodbus.md  ModbusException.3lightmodbus.md  ModbusFrame.3lightmodbus.md  ModbusMaster.3lightmodbus.md  ModbusMasterStatus.3lightmodbus.md  ModbusSlave.3lightmodbus.md  ModbusSlaveStatus.3lightmodbus.md  advanced-configuration.dox  basic-usage.dox  building.dox  custom.css  doxygen.conf  liblightmodbus-user-manual.tex  lightmodbus.3lightmodbus.md  lightmodbus.dox  mainpage.dox  modbusBuildException.3lightmodbus.md  modbusBuildRequest.3lightmodbus.md  modbusCRC.3lightmodbus.md  modbusMaskRead.3lightmodbus.md  modbusMaskWrite.3lightmodbus.md  modbusMasterEnd.3lightmodbus.md  modbusMasterInit.3lightmodbus.md  modbusParseException.3lightmodbus.md  modbusParseRequest.3lightmodbus.md  modbusParseResponse.3lightmodbus.md  modbusSlaveEnd.3lightmodbus.md  modbusSlaveInit.3lightmodbus.md  modbusSwapEndian.3lightmodbus.md  register-callback.dox  static-mem.dox  user-functions.dox
examples/: demo.c  example.c  makefile  master.c  slave.c
examples/avrslave/: README.md  avrslave.c  makefile
examples/integration/: app.c
include/lightmodbus/: base.h  base.impl.h  core.h  debug.h  debug.impl.h  examine.h  libconf.h.in  lightmodbus.h  lightmodbus.hpp  master.h  master.impl.h  master_func.h  master_func.impl.h  parser.h  slave.h  slave.impl.h  slave_func.h  slave_func.impl.h  slave_func_old.h  slave_func_old.impl.h
include/lightmodbus/addons/: examine.h
include/lightmodbus/master/: mbcoils.h  mbregs.h  mcoils.h  mdiscreteinputs.h  minputregisters.h  mpcoils.h  mpregs.h  mregisters.h  mtypes.h
include/lightmodbus/slave/: scoils.h  sdiscreteinputs.h  sinputregisters.h  sregisters.h  sregs.h  stypes.h
include/modlib/: master.h  modlib.h  slave.h
include/modlib/master/: mcoils.h  minputregisters.h  mregisters.h  mtypes.h
include/modlib/slave/: scoils.h  sdiscreteinputs.h  sinputregisters.h  sregisters.h  stypes.h
man/: ModbusData.3lightmodbus  ModbusData.3lightmodbus.md  ModbusDataType.3lightmodbus  ModbusDataType.3lightmodbus.md  ModbusException.3lightmodbus  ModbusException.3lightmodbus.md  ModbusFrame.3lightmodbus  ModbusFrame.3lightmodbus.md  ModbusMaster.3lightmodbus  ModbusMasterStatus.3lightmodbus  ModbusMasterStatus.3lightmodbus.md  ModbusSlave.3lightmodbus  ModbusSlaveStatus.3lightmodbus  ModbusSlaveStatus.3lightmodbus.md  build-man.sh  errors.3lightmodbus  errors.3lightmodbus.md  lightmodbus.3lightmodbus  lightmodbus.3lightmodbus.md  man-build.sh  man-clean.sh  man-list.sh  modbusBuildException.3lightmodbus  modbusBuildRequest.3lightmodbus  modbusBuildRequest.3lightmodbus.md  modbusBuildRequest02.3lightmodbus  modbusBuildRequest03.3lightmodbus  modbusBuildRequest04.3lightmodbus  modbusBuildRequest05.3lightmodbus  modbusBuildRequest15.3lightmodbus  modbusBuildRequest16.3lightmodbus  modbusCRC.3lightmodbus  modbusCRC.3lightmodbus.md  modbusMaskRead.3lightmodbus  modbusMaskRead.3lightmodbus.md  modbusMaskWrite.3lightmodbus  modbusMaskWrite.3lightmodbus.md  modbusMasterEnd.3lightmodbus  modbusMasterEnd.3lightmodbus.md  modbusMasterInit.3lightmodbus  (+20 more)
master/: basic.c  basic.h  mbasic.c  mbasic.h  mcoils.c  mcoils.h  mdiscreteinputs.c  mdiscreteinputs.h  minputregisters.h  mregisters.c  mregisters.h  mtypes.h  types.h
old-build-system/: genconf.sh  makefile-avr
slave/: basic.c  sbasic.c  sbasic.h  scoils.c  scoils.h  sdiscreteinputs.c  sdiscreteinputs.h  sinputregisters.c  sinputregisters.h  sregisters.c  sregisters.h  stypes.h
src/: core.c  examine.c  lightmodbus.c  master.c  modlib.c  slave.c
src/addons/: examine.c
src/master/: mbcoils.c  mbregs.c  mcoils.c  mdiscreteinputs.c  minputregisters.c  mpcoils.c  mpregs.c  mregisters.c
src/slave/: scoils.c  sdiscreteinputs.c  sinputregisters.c  sregisters.c  sregs.c
test/: .gitignore  genrq.c  impl.c  makefile  test  test-requests.txt  test.c  test.h  test_main.cpp  tester.cpp  tester.hpp
test/avr/: avrtest.c  makefile
test/basic/: basic.c  demo.c  makefile
test/cmake/: main.c
test/compat/: v3test.c
test/coverage/: coverage.c  macros.h  run.sh  run2.sh
test/fuzz/: .gitignore  run-fuzz.sh  slavefuzz.cpp  test.c
test/genrq/: .gitignore  README.txt  genrq.c  makefile
test/samples/: hexparse.c
